--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"json-server": "^0.17.3",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"pg": "^8.10.0"
 	}
 }
